# asdcontrol-gnome

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  meson.build  meson_options.txt  package-lock.json  package.json  release.config.cjs
.github/workflows/: dist.yml
locales/: app.yml
scripts/: build.sh  dev.sh  prod.sh  run.sh
src/: asdcontrol_bind.rs  check_envs.rs  checks.vala  hiddev.rs  main.cpp  main.rs  main.vala
